# wxImg2PdfGui

./: .gitignore  .gitmodules  CMakeLists.txt  ExternalLibraries.cmake  app_config.h.in  make-workdir.cmake  mingw-make-package.ps1  msvc-make-package.ps1
cpack/: InnoSetup.cmake  Installer.cmake  setup.iss
cpack/7-zip/: CMakeLists.txt
cpack/sumatra-pdf/: CMakeLists.txt  SumatraPDF-settings.txt  sumatrapdfrestrict.ini
gui/: CMakeLists.txt  DateTimePicker.cpp  DateTimePicker.h  Img2PdfGui.rc  LogListBox.cpp  LogListBox.h  SizeDialog.cpp  SizeDialog.h  StdWx.h  VariantExt.h  wxApp.cpp  wxApp.h  wxMainFrame.cpp  wxMainFrame.h
icons/: CMakeLists.txt  material-design-icons.c  material-design-icons.rc
inc/: targetver.h
license/: CMakeLists.txt  license.md.txt  template.rtf
tmpl/: CMakePresets.json  utils.cmake
